# MLOPS-Project

./: .gitignore  AGENTS.md  Dockerfile  README.md  mlflow.db  mlflow.db-shm  mlflow.db-wal  pyproject.toml  requirements.txt
conf/base/: catalog.yml  mlflow.yml  parameters.yml  parameters_data_cleaning.yml  parameters_data_drift.yml  parameters_feature_selection.yml  parameters_feature_store.yml  parameters_model_selection.yml  parameters_model_train.yml  parameters_preprocessing.yml
data/02_intermediate/: val_data.parquet
data/03_primary/: y_train_data.parquet  y_val_data.parquet
data/04_feature/: preprocessing_transformer.pkl  production_columns.pkl
data/05_model_input/: X_batch_preprocessed.parquet  (+3 more)
docs/: course_materials_review.md  notebook_structure.md  project_brief.md  project_plan.md  project_state.md
mlops-project/: .gitignore  AGENTS.md  README.md  pyproject.toml
mlops-project/data/01_raw/: README.md
mlops-project/data/01_raw/green_taxi/2026/: green_tripdata_2026-04.parquet
mlops-project/data/08_reporting/profiling/: candidate_target_summary.csv  missing_value_summary.csv  monthly_metadata.csv  numeric_summary.csv  quality_check_summary.csv  schema_by_period.csv  schema_presence_summary.csv  serving_time_column_classification.csv  temporal_summary.csv
mlops-project/docs/: course_materials_review.md  notebook_structure.md  project_plan.md  project_state.md
mlops-project/notebooks/: 01_Data_Profiling_and_Quality.ipynb
mlops-project/src/green_taxi_mlops/: __init__.py  profiling.py
mlops-project/tests/: test_profiling.py
notebooks/: 01_Data_Profiling_and_Quality.ipynb  02_data_preprocessing.ipynb  03_experiment_tracking_and_modeling.ipynb
tests/: test_api.py  test_profiling.py  test_run.py
(+89 files in other folders)
