[project]
name = "green-taxi-mlops"
version = "0.1.0"
description = "MLOps proof of concept using NYC TLC Green Taxi trip records."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.2.0",
    "matplotlib>=3.8.0",
    "nbclient>=0.10.0",
    "nbconvert>=7.16.0",
    "nbformat>=5.10.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "pytest>=8.0.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
validation = [
    "great-expectations>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/green_taxi_mlops"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
