[project]
name = "green-taxi-mlops"
version = "0.1.0"
description = "MLOps proof of concept using NYC TLC Green Taxi trip records."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.14.0",
    "docker>=7.1.0",
    "evidently>=0.7.21",
    "great-expectations>=1.16.1",
    "hopsworks>=4.8.1",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.6",
    "kedro-mlflow>=2.0.2",
    "mlflow>=3.11.1",
    "optuna>=4.8.0",
    "prefect>=3.6.27",
    "setuptools<81",
    "ucimlrepo>=0.0.7",
    "vadersentiment>=3.3.2",
    "ydata-profiling<=4.18.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/green_taxi_mlops"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
